Create Objects for things we will use in game

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 
     </div>
 
-    <script src="main.js"></script>
+    <script src="src/main.js"></script>
+    <script src="src/catcher.js"></script>
+    <script src="src/food.js"></script>
+    <script src="src/tile.js"></script>
+
 
 </body>
 
